# mixpersist

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  traces.0  traces.1
include/mix/database/: GUIDGenerator.h  any_ptr.h  database_factory.h  db_errno.h  dbdatas.h  dbmapping.h  i_connection.h  i_creater.h  i_prepared_statement.h  i_result_set.h  i_statement.h  idbc.h  sql_exception.h  transaction_manager.h
include/mix/mysql/: mysql_connection.h  mysql_creater.h  mysql_prepared_statement.h  mysql_result_set.h  mysql_statement.h
include/mix/oracle/: i_ora_creater.h  oracle_connection.h  oracle_creater.h  oracle_result_set.h  oracle_statement.h
include/mix/persist/: dao_helper.h  persist.hpp
lib/: Makefile.am  Makefile.in
lib/mix/database/: GUIDGenerator.cpp  database_factory.cpp  db_mutex.cpp  db_mutex.h  dbdatas.cpp  i_prepared_statement.cpp  i_result_set.cpp  sql_exception.cpp  time-tzset.c  time-tzset.h  transaction_manager.cpp
lib/mix/persist/: dao_helper.cpp  persist.cpp
libex/: Makefile.am  Makefile.in
libex/mysql/: Makefile.am  Makefile.in  mysql_connection.cpp  mysql_creater.cpp  mysql_prepared_statement.cpp  mysql_result_set.cpp  mysql_statement.cpp
libex/oracle/: Makefile.am  Makefile.in  oracle_connection.cpp  oracle_creater.cpp  oracle_result_set.cpp  oracle_statement.cpp  stringutil.cpp  stringutil.h
src/: Makefile.am  Makefile.in  User.cpp  User.h  mysql_persist_demo.cpp  oracle_persist_demo.cpp
